--- a/cn.zh-cn/用户指南/事务洞察.md
+++ b/cn.zh-cn/用户指南/事务洞察.md
@@ -22,7 +22,7 @@
 
 周热力图支持选择多个时间窗，单击右方的“X”，可清除热力图选项。
 
-![](figures/zh-cn_image_0128868233.png)
+![](figures/周热力图.png)
 
 2、洞察筛选表
 
@@ -30,7 +30,7 @@
 
 您可以根据自身的需求筛选出包含所需特性的所有异常类型，每筛选一次，筛选表中关键词的范围就会缩小。您所筛选的关键词将会在表格下方显示，如果您想要取消某个关键词的筛选，只需单击其“X”标记即可。
 
-![](figures/zh-cn_image_0128868236.png)
+![](figures/洞察筛选表.png)
 
 3、洞察卡片描述的是由坏调用链分析出的特征模板。
 
@@ -46,19 +46,19 @@
 
 -   出现在同一个调用链中的差异组成一组，成为一个特征模板，用于问题识别。
 
-    ![](figures/zh-cn_image_0128868239.png)
+    ![](figures/特征模板.png)
 
 
 -   上述特征模板中仅仅是做一个展示，可展开“异常调用链的样例”查看样例中具体信息。
 
     在界面展示的样例个数是默认从洞察范围的开始、中间和结束处选择“匹配的调用链”的3个样例。每个样例描述了完全匹配异常类型特征模板的坏调用链，这些样例显示了异常调用链的所在服务、错误码等信息。如果您想要获取更多调用过程的问题，可单击“Trace ID”查看调用链。
 
-    ![](figures/zh-cn_image_0128868242.png)
+    ![](figures/异常调用链样例.png)
 
 
 -   统计信息是按照事务洞察的影响类型分布的，影响类型有时延和错误两种。每一个柱形统计了所选时间范围内一分钟的影响类型的数量。
 
-    ![](figures/zh-cn_image_0128868245.png)
+    ![](figures/统计信息.png)
 
 
 ## 使用事务洞察分析问题<a name="section18575286185"></a>
@@ -72,27 +72,27 @@
 
     事务洞察特性按事务类型配置，默认关闭。
 
-    ![](figures/zh-cn_image_0128868248.png)
+    ![](figures/启用事务洞察.png)
 
 3.  在导航栏左侧单击“事务洞察”进入事务洞察界面，在周热力图中选择一个样例数最多的时间窗（9个样例），单击进入“调用链洞察”页面，可查看更多的信息，同时周热力图将会收起，呈现出您所选时间窗的时间范围。
 
-    ![](figures/zh-cn_image_0128868251.png)
+    ![](figures/选择时间范围.png)
 
 4.  此时，在调用链洞察页面的筛选表格中是已所选时间窗包含的所有异常类型特性（关键词），并按照特性的功能做了分类。
 
-    ![](figures/zh-cn_image_0128868254.png)
+    ![](figures/异常类型特性.png)
 
     接下来单击事务类型组中的关键词POST\_/product/buy/\{id\}\(4\)筛选出包含该关键词的所有异常类型。
 
     如下图，完成了关键词筛选，筛选表中的范围变小了，过滤出了4个洞察卡片都显示事务类型为POST\_/product/buy/\{id\}的信息。在洞察卡片的模式中显示了该事务性能问题所在位置，即服务为8083的mysql语句存在问题。
 
-    ![](figures/zh-cn_image_0128868257.png)
+    ![](figures/异常调用链.png)
 
 5.  单击“异常调用链的样例”，可查看更多信息以找出错误语句。
 
     例如，从服务为8083的信息可以看到返回值为500（请求错误），有异常的HTML信息，通过这些信息可以定位出错误请求位置为mySQL语句。
 
-    ![](figures/zh-cn_image_0128868260.png)
+    ![](figures/错误语句.png)
 
 6.  （可选）如果想要查看该调用链的更多问题，可单击“Trace ID”，跳转到调用链页面，通过参数、返回值、耗时等进一步定位问题。
 
@@ -111,17 +111,17 @@
 </thead>
 <tbody><tr id="row1058316369591"><td class="cellrowborder" valign="top" width="20%" headers="mcps1.2.3.1.1 "><p id="p3583036195916"><a name="p3583036195916"></a><a name="p3583036195916"></a>批量删除过滤项</p>
 </td>
-<td class="cellrowborder" valign="top" width="80%" headers="mcps1.2.3.1.2 "><p id="p258317365591"><a name="p258317365591"></a><a name="p258317365591"></a>可通过筛选表下方的<a name="image7154122217451"></a><a name="image7154122217451"></a><span><img id="image7154122217451" src="figures/zh-cn_image_0128868263.png"></span>，批量删除您选择过的筛选关键词。</p>
+<td class="cellrowborder" valign="top" width="80%" headers="mcps1.2.3.1.2 "><p id="p258317365591"><a name="p258317365591"></a><a name="p258317365591"></a>可通过筛选表下方的<a name="image39471331131019"></a><a name="image39471331131019"></a><span><img id="image39471331131019" src="figures/icon-批量删除.png"></span>，批量删除您选择过的筛选关键词。</p>
 </td>
 </tr>
 <tr id="row019992094812"><td class="cellrowborder" valign="top" width="20%" headers="mcps1.2.3.1.1 "><p id="p205831436115916"><a name="p205831436115916"></a><a name="p205831436115916"></a>快速滚动上下键</p>
 </td>
-<td class="cellrowborder" valign="top" width="80%" headers="mcps1.2.3.1.2 "><p id="p1167075833016"><a name="p1167075833016"></a><a name="p1167075833016"></a>在事务洞察页面右侧有<a name="image167351311422"></a><a name="image167351311422"></a><span><img id="image167351311422" src="figures/zh-cn_image_0128868266.png"></span>或<a name="image18527181764413"></a><a name="image18527181764413"></a><span><img id="image18527181764413" src="figures/zh-cn_image_0128868269.png"></span>快捷键，可快速页面首端或页面尾端。</p>
+<td class="cellrowborder" valign="top" width="80%" headers="mcps1.2.3.1.2 "><p id="p1167075833016"><a name="p1167075833016"></a><a name="p1167075833016"></a>在事务洞察页面右侧有<a name="image1768245161011"></a><a name="image1768245161011"></a><span><img id="image1768245161011" src="figures/icon-快速滚动上键.png"></span>或<a name="image26727576108"></a><a name="image26727576108"></a><span><img id="image26727576108" src="figures/icon-快速滚动下键.png"></span>快捷键，可快速页面首端或页面尾端。</p>
 </td>
 </tr>
 <tr id="row185831236125917"><td class="cellrowborder" valign="top" width="20%" headers="mcps1.2.3.1.1 "><p id="p1358333615919"><a name="p1358333615919"></a><a name="p1358333615919"></a>设置洞察信息</p>
 </td>
-<td class="cellrowborder" valign="top" width="80%" headers="mcps1.2.3.1.2 "><p id="p585844323319"><a name="p585844323319"></a><a name="p585844323319"></a>单击屏幕中间右侧的<a name="image18227421446"></a><a name="image18227421446"></a><span><img id="image18227421446" src="figures/zh-cn_image_0128868272.png"></span>页面设置，可修改默认的样例数量和设置洞察卡片的背景色。</p>
+<td class="cellrowborder" valign="top" width="80%" headers="mcps1.2.3.1.2 "><p id="p585844323319"><a name="p585844323319"></a><a name="p585844323319"></a>单击屏幕中间右侧的<a name="image185291712121113"></a><a name="image185291712121113"></a><span><img id="image185291712121113" src="figures/icon-设置洞察信息.png"></span>页面设置，可修改默认的样例数量和设置洞察卡片的背景色。</p>
 </td>
 </tr>
 </tbody>
