--- a/cn.zh-cn/用户指南/全链路拓扑.md
+++ b/cn.zh-cn/用户指南/全链路拓扑.md
@@ -8,7 +8,7 @@
 
 [更多操作详情请观看视频“应用性能管理——拓扑”](https://support.huaweicloud.com/apm_video/index.html)
 
-![](figures/zh-cn_image_0138073415.png)
+![](figures/拓扑图例说明.png)
 
 1.  拓扑图例说明见[表1](#zh-cn_topic_0089436418_zh-cn_topic_0082166143_table17539546194139)
 
@@ -69,7 +69,7 @@
 
 2.  在拓扑界面中，该拓扑配置对事务界面的拓扑图也生效。例如如果此处关闭了缩放视图，那么在事务界面中，事务拓扑图也不能进行缩放。
 
-    ![](figures/zh-cn_image_0127592037.png)
+    ![](figures/拓扑配置.png)
 
 
 ## 通过拓扑快速定位问题<a name="zh-cn_topic_0089436418_zh-cn_topic_0082166143_section20916239114818"></a>
@@ -92,6 +92,6 @@
 1.  在拓扑界面中，将鼠标放在圈图上，右击并选择“修改阈值”。
 2.  修改事务Apdex阈值，并单击“确定”。
 
-    ![](figures/zh-cn_image_0127592045.png)
+    ![](figures/编辑Apdex阈值.png)
 
 
