--- a/cn.zh-cn/用户指南/调用链.md
+++ b/cn.zh-cn/用户指南/调用链.md
@@ -14,7 +14,7 @@
 4.  根据“时间线”锁定耗时较长的方法，找出性能瓶颈。
 5.  （可选）查看调用的辅助信息，进一步定界问题产生的原因。
 
-    单击“操作”列的“扩展信息”，查看相应调用的扩展信息。
+    单击“操作”列的“详情”，查看详细的调用信息。
 
 
 ## 故障辅助定位<a name="zh-cn_topic_0089436397_zh-cn_topic_0082166145_zh-cn_topic_0053944139_zh-cn_topic_0048336216_zh-cn_topic_0048326219_zh-cn_topic_0041573249_section39873905194339"></a>
@@ -25,6 +25,6 @@
 4.  单击“查看调用关系”，查看返回值是否正常，找出故障。
 5.  （可选）查看接口调用的辅助信息，进一步定界问题产生的原因。
 
-    单击“操作”列的“扩展信息”，查看相应调用的扩展信息。
+    单击“操作”列的“详情”，查看详细的调用信息。
 
 
