--- a/cn.zh-cn/用户指南/配置中心.md
+++ b/cn.zh-cn/用户指南/配置中心.md
@@ -6,19 +6,19 @@
 2.  在左侧导航栏中选择“配置中心”。
 3.  在下拉列表框中选择需要设置Apdex阈值的应用。
 4.  设置阈值。[什么是Apdex及Apdex阈值](https://support.huaweicloud.com/productdesc-apm/apm_06_0002.html)
-    -   在“拓扑Apdex阈值”后单击![](figures/zh-cn_image_0127591999.png)并输入拓扑Apdex阈值，单击![](figures/zh-cn_image_0127592002.png)保存。
+    -   在“拓扑Apdex阈值”后单击![](figures/icon-编辑5.png)并输入拓扑Apdex阈值，单击![](figures/icon-输入4.png)保存。
 
         >![](public_sys-resources/icon-note.gif) **说明：**   
         >拓扑Apdex阈值默认为100毫秒。  
 
-    -   在“事务Apdex阈值”后单击![](figures/zh-cn_image_0127592005.png)并输入事务Apdex阈值，单击![](figures/zh-cn_image_0127592008.png)保存。
+    -   在“事务Apdex阈值”后单击![](figures/icon-编辑6.png)并输入事务Apdex阈值，单击![](figures/icon-输入5.png)保存。
 
         >![](public_sys-resources/icon-note.gif) **说明：**   
         >-   事务Apdex阈值默认为500毫秒。  
         >-   该设置对应用内所有事务均生效。若用户已对某个事务的Apdex阈值单独进行了设置，则该设置对此事务不生效，但对此事务外的其他事务生效。单独设置某个事务Apdex阈值操作如下：  
         >    1.  在左侧导航栏中选择“事务”。  
         >    2.  在左上方的下拉列表框中选择事务所在的应用。  
-        >    3.  在事务列表中，找到该事务的“当前Apdex阈值\(ms\)”，单击![](figures/zh-cn_image_0127592011.png)并输入当前Apdex阈值，单击![](figures/zh-cn_image_0127592014.png)保存。  
+        >    3.  在事务列表中，找到该事务的“当前Apdex阈值\(ms\)”，单击![](figures/icon-编辑7.png)并输入当前Apdex阈值，单击![](figures/icon-输入6.png)保存。  
 
 
 
