--- a/cn.zh-cn/用户指南/查看告警.md
+++ b/cn.zh-cn/用户指南/查看告警.md
@@ -54,7 +54,7 @@
     </tr>
     <tr id="row383117717471"><td class="cellrowborder" valign="top" width="20%" headers="mcps1.2.4.1.1 "><p id="p183113724711"><a name="p183113724711"></a><a name="p183113724711"></a>查看最新告警</p>
     </td>
-    <td class="cellrowborder" valign="top" width="40%" headers="mcps1.2.4.1.2 "><p id="p1983110719472"><a name="p1983110719472"></a><a name="p1983110719472"></a>单击页面右侧的<a name="image13673111482620"></a><a name="image13673111482620"></a><span><img id="image13673111482620" src="figures/zh-cn_image_0135500372.png"></span>，可查看最新上报的3条告警。</p>
+    <td class="cellrowborder" valign="top" width="40%" headers="mcps1.2.4.1.2 "><p id="p1983110719472"><a name="p1983110719472"></a><a name="p1983110719472"></a>单击页面右侧的<a name="image1279313421808"></a><a name="image1279313421808"></a><span><img id="image1279313421808" src="figures/icon-最新告警.png"></span>，可查看最新上报的3条告警。</p>
     </td>
     <td class="cellrowborder" valign="top" width="40%" headers="mcps1.2.4.1.3 "><p id="p178311372477"><a name="p178311372477"></a><a name="p178311372477"></a>-</p>
     </td>
