--- a/cn.zh-cn/用户指南/浏览器汇总.md
+++ b/cn.zh-cn/用户指南/浏览器汇总.md
@@ -30,7 +30,7 @@
 
 当用户点击站点上的超链接或通过地址栏访问一个URL时，页面的加载流程开始，整个过程直到页面在用户的浏览器中完成渲染为止。华为云应用性能管理将记录下图页面加载时间轴中的每个时间点，通过记录的时间点计算页面加载各部分耗时，并以累积图的方式为您展示，帮助快速定位前台性能瓶颈。根据页面加载过程中涉及到的不同业务，整个加载过程被分为四个阶段，如下图所示：
 
-![](figures/zh-cn_image_0128868275.png)
+![](figures/页面加载耗时.png)
 
 其中各段耗时的计算方式如下表所示：
 
@@ -88,7 +88,7 @@
 
 ## 浏览器汇总界面操作<a name="section16744158919"></a>
 
-通过单击浏览器汇总页左侧的![](figures/zh-cn_image_0128868278.png)解锁按钮，您可对汇总页面中的控件进行如下表操作。
+通过单击浏览器汇总页左侧的![](figures/icon-解锁按钮1.png)解锁按钮，您可对汇总页面中的控件进行如下表操作。
 
 <a name="table16941192520152"></a>
 <table><thead align="left"><tr id="row6826364"><th class="cellrowborder" valign="top" width="15%" id="mcps1.1.4.1.1"><p id="p16064575"><a name="p16064575"></a><a name="p16064575"></a>操作对象</p>
@@ -103,8 +103,8 @@
 </td>
 <td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.4.1.2 "><p id="p15203586"><a name="p15203586"></a><a name="p15203586"></a>锁定</p>
 </td>
-<td class="cellrowborder" rowspan="4" valign="top" width="70%" headers="mcps1.1.4.1.3 "><p id="p23530993"><a name="p23530993"></a><a name="p23530993"></a>通过单击浏览器汇总页左侧的<a name="image683239163613"></a><a name="image683239163613"></a><span><img id="image683239163613" src="figures/zh-cn_image_0128868281.png"></span>解锁按钮，可添加、删除、重置汇总页面的控件。</p>
-<p id="p10452353"><a name="p10452353"></a><a name="p10452353"></a><a name="image050623012318"></a><a name="image050623012318"></a><span><img id="image050623012318" src="figures/zh-cn_image_0128868284.png"></span></p>
+<td class="cellrowborder" rowspan="4" valign="top" width="70%" headers="mcps1.1.4.1.3 "><p id="p23530993"><a name="p23530993"></a><a name="p23530993"></a>通过单击浏览器汇总页左侧的<a name="image2561097163"></a><a name="image2561097163"></a><span><img id="image2561097163" src="figures/icon-解锁按钮2.png"></span>解锁按钮，可添加、删除、重置汇总页面的控件。</p>
+<p id="p10452353"><a name="p10452353"></a><a name="p10452353"></a><a name="image11702111171812"></a><a name="image11702111171812"></a><span><img id="image11702111171812" src="figures/汇总界面1.png"></span></p>
 </td>
 </tr>
 <tr id="row41334227"><td class="cellrowborder" valign="top" headers="mcps1.1.4.1.1 "><p id="p59738106"><a name="p59738106"></a><a name="p59738106"></a>添加</p>
@@ -120,8 +120,8 @@
 </td>
 <td class="cellrowborder" valign="top" width="15%" headers="mcps1.1.4.1.2 "><p id="p33514934"><a name="p33514934"></a><a name="p33514934"></a>删除</p>
 </td>
-<td class="cellrowborder" rowspan="2" valign="top" width="70%" headers="mcps1.1.4.1.3 "><p id="p30355138"><a name="p30355138"></a><a name="p30355138"></a>通过单击浏览器汇总页左侧的<a name="image7330121215361"></a><a name="image7330121215361"></a><span><img id="image7330121215361" src="figures/zh-cn_image_0128868287.png"></span>解锁按钮，在每个控件可进行对控件的“删除”，对控件视图“放大”的操作。</p>
-<p id="p17540145514296"><a name="p17540145514296"></a><a name="p17540145514296"></a><a name="image1743954193716"></a><a name="image1743954193716"></a><span><img id="image1743954193716" src="figures/zh-cn_image_0128868290.png"></span></p>
+<td class="cellrowborder" rowspan="2" valign="top" width="70%" headers="mcps1.1.4.1.3 "><p id="p30355138"><a name="p30355138"></a><a name="p30355138"></a>通过单击浏览器汇总页左侧的<a name="image203921524161619"></a><a name="image203921524161619"></a><span><img id="image203921524161619" src="figures/icon-解锁按钮3.png"></span>解锁按钮，在每个控件可进行对控件的“删除”，对控件视图“放大”的操作。</p>
+<p id="p17540145514296"><a name="p17540145514296"></a><a name="p17540145514296"></a><a name="image1554753110184"></a><a name="image1554753110184"></a><span><img id="image1554753110184" src="figures/用户体验（Apdex）1.png"></span></p>
 </td>
 </tr>
 <tr id="row4760790"><td class="cellrowborder" valign="top" headers="mcps1.1.4.1.1 "><p id="p50079677"><a name="p50079677"></a><a name="p50079677"></a>放大</p>
