--- a/cn.zh-cn/用户指南/事务列表.md
+++ b/cn.zh-cn/用户指南/事务列表.md
@@ -6,7 +6,7 @@
 
 [更多操作详情请观看视频“应用性能管理操作——事务”](https://support.huaweicloud.com/apm_video/index.html)
 
-![](figures/事务界面.png)
+![](figures/事务列表.png)
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
 >事务界面图中的“启用事务洞察”开关 ，仅对华北区域可见。  
@@ -15,10 +15,10 @@
 
 以某事务极慢为例。
 
-1.  在事务界面中的事务列表中选择极慢的事务。
+1.  在事务列表中选择事务组中极慢的事务。
 
     ![](figures/极慢事务.png)
 
-2.  单击动作列的![](figures/icon-查看拓扑结构.jpg)查看拓扑结构，在拓扑界面中查看实例具体情况。
-3.  右键单击极慢的实例，选择“调用链搜索”，跳转到调用链页面，通过参数、返回值、耗时等进一步定位问题。
+2.  单击操作列中“事务拓扑”查看该事务的全链路拓扑结构，在拓扑界面中查看实例具体情况。
+3.  右键单击极慢的实例，选择“调用链搜索”，跳转到调用链页面，通过参数、调用耗时等进一步定位问题。
 
