--- a/cn.zh-cn/用户指南/事务洞察.md
+++ b/cn.zh-cn/用户指南/事务洞察.md
@@ -63,12 +63,12 @@
 
 ## 使用事务洞察分析问题<a name="section18575286185"></a>
 
-例如当前我已有应用，名称为**e-store**，它是一个电商应用，有一个事务是购买事务，名称为POST\_/product/buy/\{id\}\(4\)。
+例如当前我已有应用，名称为**e-store**，它是一个电商应用，有一个事务是购买事务，名称为POST\_/product/buy/\{id\}。
 
-下面以开启应用e-store中的事务购买事务POST\_/product/buy/\{id\}\(4\)为例，开始事务洞察分析性能问题的原因。
+下面以开启应用e-store中的事务购买事务POST\_/product/buy/\{id\}为例，开始事务洞察分析性能问题的原因。
 
 1.  登录[应用性能管理](https://console.huaweicloud.com/apm/)。
-2.  在导航栏左侧单击“事务列表”进入事务界面，在事务列表中选择事务名称为POST\_/product/buy/\{id\}\(4\)并点击“启用事务洞察”。
+2.  在导航栏左侧单击“事务列表”进入事务界面，在事务列表中选择事务名称为POST\_/product/buy/\{id\}并点击“启用事务洞察”。
 
     事务洞察特性按事务类型配置，默认关闭。
 
